# flask-crud

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
flask_crud/: main.py
flask_crud/app/: __init__.py  models.py  routes.py
tests/postman/: Flask-CRUD.postman_collection.json
